--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
     <osgi.import>*;resolution:=optional</osgi.import>
     <osgi.dynamicImport>*</osgi.dynamicImport>
     <maven.surefire.excludeGroups>org.apache.ibatis.test.SlowTests</maven.surefire.excludeGroups>
+    <junit-engine.version>5.3.2</junit-engine.version>
   </properties>
 
   <dependencies>
